# fastly_decap_oauth

./: Cargo.toml  fastly.toml
src/: main.rs
templates/: login_response.html
